--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,12 @@
 
 html {
   font-size: 62.5%;
+  --header1: calc(2rem + 1vw);
+  --header2: calc(3.5rem + 1vw);
+  --header3: calc(3rem + 1vw);
+  --header4: calc(2.4rem + 1vw);
+  --text: calc(1.5rem + 1vw);
+  --header4: calc(2.4rem + 1vw);
 }
 
 body {
@@ -21,7 +27,8 @@ h1 {
 li,
 button,
 label,
-inputs {
+input,
+p {
   font-size: 2rem;
 }
 
