--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ li,
 button,
 label,
 input,
+a,
 p {
   font-size: var(--text);
 }
@@ -61,6 +62,7 @@ ul {
 
 a {
   text-decoration: none;
+  color: black;
 }
 
 /* Helper class */
@@ -77,4 +79,45 @@ body {
 
 h1 {
   font-family: 'Vibes', sans-serif;
+}
+
+/* Nav section */
+
+.main-header {
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
+}
+
+.main-header nav {
+  display: flex;
+  align-items: center;
+  min-height: 10vh;
+  width: 90%;
+  margin: auto;
+  padding: 2rem 0rem;
+}
+
+.main-header #logo {
+  flex: 1 1 20rem;
+}
+
+.nav-links {
+  display: flex;
+  flex: 1 1 20rem;
+  justify-content: space-around;
+}
+
+.hero {
+  display: flex;
+}
+.hero .hero-introduction {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  width: 50%;
+  margin: auto;
+}
+
+.hero .hero-images img {
+  height: 100vh;
 }
