--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ html {
   --header3: calc(3rem + 1vw);
   --header4: calc(2.4rem + 1vw);
   --text: calc(1.5rem + 1vw);
-  --big: calc(2.4rem + 1vw);
+  --big: calc(6rem + 1vw);
   --special-color: #906272;
   --background-color: #414141;
   --gray-text: #525252;
@@ -35,7 +35,6 @@ html {
 h1 {
   font-size: var(--header1);
 }
-
 li,
 button,
 label,
@@ -44,7 +43,6 @@ a,
 p {
   font-size: var(--text);
 }
-
 h2 {
   font-size: var(--header2);
 }
@@ -59,7 +57,6 @@ h5 {
 ul {
   list-style: none;
 }
-
 a {
   text-decoration: none;
   color: black;
@@ -85,6 +82,8 @@ h1 {
 
 .main-header {
   box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
+  z-index: 2;
+  position: relative;
 }
 
 .main-header nav {
@@ -108,16 +107,53 @@ h1 {
 
 .hero {
   display: flex;
+  flex-wrap: wrap;
+  min-height: 90vh;
+  width: 95%;
+  margin: 0 0 0 auto;
+  overflow: hidden;
 }
 .hero .hero-introduction {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-content: center;
-  width: 50%;
-  margin: auto;
+  align-items: center;
+  text-align: center;
+  flex: 2 1 40rem;
+}
+
+.hero .hero-introduction p {
+  padding: 5rem 10rem;
+}
+.hero .hero-introduction h2 {
+  padding-top: 3rem;
+}
+.hero .hero-introduction a {
+  padding: 2rem 8rem;
+  border: 3px solid black;
+  margin-bottom: 4rem;
+}
+
+.hero .hero-images {
+  flex: 1 1 40rem;
+  background: linear-gradient(#dad8dd, #dad1d4);
+  position: relative;
+  z-index: 1;
 }
 
 .hero .hero-images img {
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.hero .hero-images .plant {
+  position: absolute;
+  bottom: 0;
+  left: -20%;
+  z-index: -1;
+}
+
+.hero .hero-images .plant2 {
+  left: 40%;
 }
