--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ a {
 
 body {
   font-family: 'Ruhl', sans-serif;
+  animation: opening 1s ease-in-out;
 }
 
 h1 {
@@ -152,8 +153,42 @@ h1 {
   bottom: 0;
   left: -20%;
   z-index: -1;
+  transform: translateY(10%) rotateZ(-10deg) rotateX(-90deg);
+  animation: plant-entrance 2s ease-in-out 0.5s forwards,
+    plant-shake 2.5s infinite ease alternate-reverse 2s;
+  transform-origin: bottom;
 }
 
 .hero .hero-images .plant2 {
   left: 40%;
+}
+
+/* ANIMATIONS */
+
+@keyframes opening {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes plant-entrance {
+  from {
+    transform: translateY(10%) rotateZ(-10deg) rotateX(-90deg);
+  }
+  to {
+    transform: translateY(0%) rotateZ(0deg) rotateX(0);
+  }
+}
+
+@keyframes plant-shake {
+  from {
+    transform: rotateZ(-5deg);
+  }
+  to {
+    transform: rotateZ(0deg);
+  }
 }
