added markup for the about section

--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ h1 {
 
 .hero .hero-introduction p {
   padding: 5rem 10rem;
+  color: var(--gray-text);
 }
 .hero .hero-introduction h2 {
   padding-top: 3rem;
