styled about image section

--- a/style.css
+++ b/style.css
@@ -165,6 +165,41 @@ h1 {
   left: 40%;
 }
 
+/* ABOUT SECTION */
+
+.about {
+  min-height: 100vh;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.about .about-image {
+  flex: 1 1 40rem;
+  position: relative;
+}
+.about .about-image h5 {
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -20%);
+  letter-spacing: 2rem;
+}
+.about .about-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.about .about-text {
+  background: var(--background-color);
+  color: white;
+  flex: 2 1 40rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
 /* ANIMATIONS */
 
 @keyframes opening {
