--- a/style.css
+++ b/style.css
@@ -213,6 +213,37 @@ h1 {
   font-family: 'Vibes';
 }
 
+/* Gallery section */
+.gallery {
+  display: grid;
+  min-height: 100vh;
+  grid-template-columns: repeat(3, 1fr);
+  position: relative;
+}
+.gallery img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.gallery1 {
+  grid-column: 1/3;
+}
+.gallery2 {
+  grid-column: 3/4;
+  grid-row: 1/3;
+}
+
+.gallery-head {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  background: var(--background-color);
+  padding: 5rem 10rem;
+  text-align: center;
+}
+
 /* ANIMATIONS */
 
 @keyframes opening {
@@ -282,5 +313,17 @@ h1 {
   /* About section */
   .about .about-text div {
     padding: 3rem 3rem;
+  }
+
+  /* Gallery section */
+  .gallery img {
+    grid-row: auto;
+    grid-column: auto;
+  }
+  .gallery {
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  }
+  .gallery-head {
+    display: none;
   }
 }
