added maximum font size to larger screens

--- a/style.css
+++ b/style.css
@@ -405,3 +405,14 @@ footer ul {
     padding: 1rem;
   }
 }
+
+@media screen and (min-width: 1700px) {
+  html {
+    --header1: 3rem;
+    --header2: 5rem;
+    --header3: 4rem;
+    --header4: 3rem;
+    --text: 3rem;
+    --big: 8rem;
+  }
+}
